# ibt_ros2_description

./: README.md
awtube31814v2/: CMakeLists.txt  package.xml
awtube31814v2/config/: config.rviz  joint_names_awtube31814v2.yaml
awtube31814v2/launch/: display.launch.py
awtube31814v2/meshes/: awtube3_link2.STL  awtube3_link3.STL  awtube3_link4.STL  awtube3_link5.STL  awtube3_link6.STL
awtube31814v2/meshes/controllo/: awtube3_link2.STL  awtube3_link3.STL  awtube3_link4.STL  awtube3_link5.STL  awtube3_link6.STL
awtube31814v2/xacro/: awtube31814v2.urdf  awtube31814v2.urdf.xacro  awtube31814v2.xacro
